2007-06-18  Paul Emsley  <emsley@localhost>

	* src/c-interface.cc: Add action view - as a direct view.  But,
	don't we really instead want to insert such a thing into a set of
	views that we already have?

2007-06-17  Paul Emsley  <emsley@localhost>

	* ligand/wiggly-ligand.cc: turn off debugging for wiggly ligands.

2007-06-07  Paul Emsley  <emsley@ysbl.york.ac.uk>

	* coords/Bond_lines.cc: (construct_from_atom_selection): Don't
	mark S, SE, CL, BR, or P as bonded.

2007-05-29  Paul Emsley  <emsley@localhost>

	* src/molecule-class-info-other.cc:
	change_chain_id_with_residue_range_helper_insert_or_add() the
	target_residue should simply be a residue that will appear in the
	pdb file before the inserted residue.
 
2007-05-18  Paul Emsley  <emsley@ysbl.york.ac.uk>

	* src/c-interface.cc: (hardware_stereo_mode): kill off the
	SIDE_BY_SIDE_STEREO widget, if it was active.

2007-05-12  Paul Emsley  <emsley@localhost>

	* src/c-interface-build.cc (get_monomer): check that the library
	does not provide the restraints for the given 3-letter-code before
	passing to the libcheck function [Judit Debreczeni].

2007-05-04  Paul Emsley  <emsley@localhost>

	* src/molecule-class-info.cc: (anisotropic_atoms): Add in cholesky
	decomposition to the matrix.

2007-05-03  Paul Emsley  <emsley@localhost>

	* src/graphics-info-modelling.cc: Added
	execute_simple_nucleotide_addition() function.

2007-05-01  Paul Emsley  <emsley@localhost>

	* src/molecule-class-info.cc: Kevin Cowtan provided a patch for
	CNS map reading.

2007-04-13  Paul Emsley  <emsley@localhost>

	* src/pick.cc: Added Segid info to picked atom output info
	[Christie Durnham]

2007-04-07  Paul Emsley  <emsley@ysbl.york.ac.uk>

	* Release 0.3.1 

	* enable NCS ghosts.  Add fractional matrix for LSQing. 

	* Release 0.3

2007-03-31  Paul Emsley  <emsley@ysbl.york.ac.uk>

	* src/graphics-info.cc: (destroy_edit_backbone_rama_plot): set
	edit_phi_psi_plot to null so that it is not left dangling when we