@@ -31,6 +31,13 @@
 #include <gtk/gtk.h>
 #include <GL/gl.h>
 
+#if (GTK_MAJOR_VERSION == 1) || defined (GTK_ENABLE_BROKEN)
+#include <gtkgl/gtkglarea.h>
+#else
+#include <gdk/gdkglconfig.h>
+#include <gtk/gtkgl.h>
+#endif // (GTK_MAJOR_VERSION == 1) || defined (GTK_ENABLE_BROKEN)
+
 #include "Cartesian.h"
 #include "pick.h"
 #include "clipper/core/xmap.h"
@@ -709,16 +716,54 @@ public:
       dictionary_glob_extensions->push_back(".mmcif.gz");
       dictionary_glob_extensions->push_back(".mmCIF.gz");
 
+      do_expose_swap_buffers_flag = 1;
    }
 
+   static bool do_expose_swap_buffers_flag;
+
    static void graphics_draw() {
-     if (glarea) { 
-       gtk_widget_draw(glarea, NULL);
-       if (make_movie_flag)
-	 dump_a_movie_image();
-     }
-     if (glarea_2)
+     if (glarea_2) { 
+       do_expose_swap_buffers_flag = 0;
+       if (glarea) { 
+	 gtk_widget_draw(glarea, NULL);
+	 if (make_movie_flag)
+	   dump_a_movie_image();
+       }
        gtk_widget_draw(glarea_2, NULL);
+
+       // now swap the buffers then:
+       if (display_mode == coot::HARDWARE_STEREO_MODE) {
+	 graphics_info_t::coot_swap_buffers(glarea, 1); // flag for hardware stereo
+       } else {
+	 graphics_info_t::coot_swap_buffers(glarea, 0);
+       }
+       if (glarea_2)
+	 graphics_info_t::coot_swap_buffers(glarea_2, 0); 
+
+       do_expose_swap_buffers_flag = 1;
+     } else { 
+       // there was only one gl context, so normal thing
+       do_expose_swap_buffers_flag = 1;
+       gtk_widget_draw(glarea, NULL);
+       graphics_info_t::coot_swap_buffers(glarea, 0);
+     }
+   }
+
+   static void coot_swap_buffers(GtkWidget *widget, short int in_stereo_flag) { 
+     if (! in_stereo_flag) { 
+       /* Swap backbuffer to front */
+#if (GTK_MAJOR_VERSION == 1) || defined (GTK_ENABLE_BROKEN)
+       gtk_gl_area_swapbuffers(GTK_GL_AREA(widget));
+#else
+       GdkGLDrawable *gldrawable = gtk_widget_get_gl_drawable (widget);
+       if (gdk_gl_drawable_is_double_buffered (gldrawable)) { 
+	 gdk_gl_drawable_swap_buffers (gldrawable);
+       } else { 
+	 glFlush ();
+       }
+#endif
+       graphics_info_t::Increment_Frames();
+     }
    }
 
 
